# Voyager-based-Steganography

./: README.md  setup.cfg  setup.py  test.py  testImage.py
src/SBS/: audiomessage.py  imagemessage.py  key.py  messenger.py
src/SBS/decoding/: audiomessage.py  key.py  message.py  received.py  response.py
src/SBS/encoding/: send.py  sender.py
src/VBS/: audiomessage.py  imagemessage.py  key.py  messenger.py
src/VBS/decoding/: received.py  response.py
src/VBS/encoding/: send.py  sender.py
src/VBS_Voyager_Based_Steganography.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: createtxt.py  images.py
test/text/left/: text_0.txt  text_1.txt  text_2.txt
test/text/right/: text_0.txt  text_1.txt  text_2.txt
