[metadata]
name = VBS
version = 0.0.1
author = Joao Victor Alcantara Pimenta
author_email = joaovictorpimenta@gmail.com
description = Using knowledge applied in decoding Voyager images to cryptograph images into audio files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Joao-vap/Voyager-based-Steganography
project_urls =
    Bug Tracker = https://github.com/Joao-vap/Voyager-based-Steganography/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src